@@ -24,6 +24,12 @@
  * Most of the original code comes from clock.c
  */
 
+#include "config.h"
+
+#ifdef HAVE_LANGINFO_H
+#include <langinfo.h>
+#endif
+
 #include <glib/gi18n.h>
 
 #include <gtk/gtk.h>
