@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.3.1 on Wed Jul  4 23:56:21 2007 by vuntz@latronche-->
+<!--Generated with glade3 3.3.1 on Thu Jul  5 18:58:43 2007 by vuntz@latronche-->
 <glade-interface>
   <widget class="GtkDialog" id="timezone_dialog">
     <property name="width_request">560</property>
@@ -196,6 +196,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                        <property name="shadow_type">GTK_SHADOW_IN</property>
                         <child>
                           <placeholder/>
                         </child>
