@@ -1,3 +1,10 @@
+2007-07-06  Vincent Untz  <vuntz@gnome.org>
+
+	* clock-utils.c: include config.h
+	Fix bug #454299 (12-hour setting not working anymore)
+	* clock.c: remove useless include
+	* timezone.glade: add a shadow for the map
+
 2007-07-05  Vincent Untz  <vuntz@gnome.org>
 
 	Add support for timezones. This needs some more work and testing on
